# bids-duckdb

./: .copier-answers.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  NOTICE  README.dev.md  README.md  demo.py  pyproject.toml  setup.py  sonar-project.properties  tox.ini
.github/workflows/: lint.yml  next_steps_citation_issue.md  next_steps_linting_issue.md  next_steps_online_documentation_issue.md  next_steps_sonarcloud_issue.md  next_steps_zenodo_issue.md  run-tests.yml  typing.yml
bids_duckdb/: __init__.py  _version.py
bids_duckdb/tests/: __init__.py  test_basic.py
docs/: Makefile  conf.py  index.rst  make.bat
examples/: README.md  basic_usage.py  benchmark_comparison.py
src/bids_duckdb/: __init__.py  approach1_sql.py  approach2_python.py  approach3_table_function.py  base.py  benchmark.py  my_module.py  schema.py
tests/: test_base.py  test_my_module.py  test_schema.py
